home screen done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+      - assets/icons/campus.png
+      - assets/icons/college.png
+      - assets/icons/department.png
+      - assets/icons/news.png
+      - assets/icons/research.png
+      - assets/icons/srs.png
+      - assets/icons/internship.png
+      - assets/icons/club.png
+      - assets/images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
