--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
+  accordion: ^2.6.0
+  google_maps_flutter: ^2.6.1
+  http: ^1.2.2
+ 
 
 dev_dependencies:
   flutter_test:
