--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_maps_flutter: ^2.6.1
   http: ^1.2.2
   intl: ^0.20.0
+  shared_preferences: ^2.2.3
  
 
 dev_dependencies:
