google maps integrated

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,10 +33,15 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+             <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCOprOG9KBrBkcqEdDlLSDAwkcxz0ce8kI"/>
     </application>
 
     <!-- Required to fetch data from the internet -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 
     <!-- Required to query activities that can process text -->
     <queries>
@@ -45,4 +50,7 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+
+    
 </manifest>
