--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>Your location is needed for showing the map.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Your location is needed for showing the map.</string>
+
+	 
 </dict>
 </plist>
