--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
   accordion: ^2.6.0
-  google_maps_flutter: ^2.6.1
+  google_maps_flutter: ^2.1.1
   http: ^1.2.2
   intl: ^0.20.0
   shared_preferences: ^2.2.3
+  permission_handler: ^10.0.0
+  location: ^5.0.0
  
 
 dev_dependencies:
